--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-Django>=6.0
-djangorestframework
-joblib
-pandas
-numpy
-scikit-learn
-imbalanced-learn
+django>=6.0
+djangorestframework>=3.16.1
+joblib>=1.5.2
+scikit-learn>=1.7.2
+numpy>=2.3.5
+pandas>=2.3.3
+imbalanced-learn>=0.14.0
